update ff readme and requirements

--- a/Fastfloww/examples/requirements_common.txt
+++ b/Fastfloww/examples/requirements_common.txt
@@ -1,7 +1,10 @@
 # Common
 matplotlib==3.5.3
 pandas
-tensorflow_datasets
-tensorflow_io
+numpy==1.20.3
+protobuf==3.19.6
+tensorflow-metadata==1.12.0
+tensorflow_datasets==4.8.0
+tensorflow_io==0.30.0
 tensorflow_addons
 imgaug
